userhome component modified.1

--- a/frontend/app/login/login.scss
+++ b/frontend/app/login/login.scss
@@ -41,7 +41,11 @@ login-cmp {
           padding-right: 400px;
       }
        #signup {
-           padding-left: 500px;
-           padding-top: 35px;
+           padding-left: 385px;
+           padding-top: 2px;
+       }
+       #btn{
+           margin-top: -60px;
+           margin-left: 600px;
        }
 }
