--- a/frontend/app/userhome/userhome.scss
+++ b/frontend/app/userhome/userhome.scss
@@ -10,8 +10,12 @@ userhome-cmp {
     .nav {
         padding-top: 10px;
         padding-bottom: 10px;
-        padding-left: 820px;
+        padding-left: 801px;
         float: right;
+    }
+    #logoutbtn{
+        margin-left: 25px;
+        margin-right: 5px;
     }
    .appname{
         padding-top: 5px;
