--- a/frontend/app/home/home.scss
+++ b/frontend/app/home/home.scss
@@ -1,69 +1,12 @@
 home-cmp {
-    .header {
-        background-color: darkslategray;
-        position: fixed;
-    }
-    #containerheader{
-        width:100%;
-        float: right;
-    }
-    .nav {
-        padding-top: 10px;
-        padding-bottom: 10px;
-        padding-left: 912px;
-        float: right;
-    }
-   .appname{
-        padding-top: 5px;
-        font-size: 30px;
-        float:left;
-        text-decoration: none;
-    }
-    a{
-        color: darkorange;
-        
-      }
-      a:hover {
-          text-decoration: none;
-          color: orangered;
-      }
-      
-      .jumbotron {
-          font-size: 300px;
-          font-family: Cambria, Cochin, Georgia, Times, Times New Roman, serif;
-          text-align: center;
-          color: white;
-          width: 100%;
-          height: 660px;
-          margin-bottom: 0px;
-          padding-top: 250px;
-          padding-bottom: 250px;
-          background-image: url("../assets/img/room.jpg");
-          background-size: 100% auto;
-      }
-
-      .container-fluid {
-          background-size: 100% auto;
-      }
-      #findimg{
-          margin-top: 20px;
-          padding-right: 0px;
-      }
-      #moveimg {
-          margin-right: 0px;
-      }
-      .footer-above{
-        font-size: 20px;
-        padding-top: 20px;
-        padding-bottom: 20px;
+    .jumbotron{
+        background-image: url('../assets/img/room.jpg');
         color: white;
-        background-color: darkslategrey;
-    }
-    .footer-below{
-        font-size: 20px;
-        padding-top: 20px;
-        padding-bottom: 20px;
-        color:white;
-        background-color: darkslategray;
+        background-size: 100% auto;
+        text-align:center;
+        width:100%;
+        height:600px;
+        margin-top: -20px;
+        padding-top: 150px;
     }
 }
