--- a/frontend/app/home/home.scss
+++ b/frontend/app/home/home.scss
@@ -9,4 +9,12 @@ home-cmp {
         margin-top: -20px;
         padding-top: 150px;
     }
+    .footer-above{
+    background-color: #3e152b;
+    color: white;
+    }
+    .footer-below{
+    background-color: #3e152b;
+    color: white;
+    }
 }
